--- a/static/css/register.css
+++ b/static/css/register.css
@@ -32,6 +32,7 @@ body {
   box-shadow: 0px 2px 7px rgba(0,0,0,0.2);
   overflow: hidden;
   transition: all .5s ease;
+  height: max-content;
 }
 
 .frame-long {
@@ -60,7 +61,7 @@ li {
   color: #ffffff;
 }
 
-.signin-active a {
+.signedin-active a {
   padding-bottom: 10px;
   color: #ffffff;
   text-decoration: none;
@@ -69,7 +70,7 @@ li {
   cursor: pointer;
 }
 
-.signin-inactive a {
+.signedin-inactive a {
   padding-bottom: 0;
   color: rgba(255,255,255,.3);
   text-decoration: none;
@@ -77,7 +78,7 @@ li {
   cursor: pointer;
 }
 
-.signup-active a {
+.signedup-active a {
   cursor: pointer;
   color: #ffffff;
   text-decoration: none;
@@ -85,14 +86,14 @@ li {
   padding-bottom: 10px;
 }
 
-.signup-inactive a {
+.signedup-inactive a {
   cursor: pointer;
   color: rgba(255,255,255,.3);
   text-decoration: none;
   transition: all .25s ease;
 }
 
-.form-signin {
+.form-signedin {
   width: 430px;
   height: 375px;
 	font-size: 16px;
@@ -103,32 +104,28 @@ li {
   transition: opacity .5s ease, transform .5s ease;
 }
 
-.form-signin-left {
+.form-signedin-left {
   transform: translateX(-400px);
   opacity: .0;
 }
 
-.form-signup {
+.form-signedup {
   width: 430px;
-  height: 375px;
 	font-size: 16px;
 	font-weight: 300;
   padding-left: 37px;
   padding-right: 37px;
   padding-top: 55px;
-  position: relative;
-  top: -375px;
-  left: 400px;
-  opacity: 0;
-  transition: all .5s ease;
+  height: 100%;
+  display:block;
 }
 
-.form-signup-left {
+.form-signedup-left {
   transform: translateX(-399px);
   opacity: 1;
 }
 
-.form-signup-down {
+.form-signedup-down {
   top: 0px;
   opacity: 0;
 }
@@ -174,7 +171,7 @@ li {
     fill: rgba(255,255,255,.03);
 }
 
-.form-signin input, .form-signup input {
+.form-signedin input, .form-signedup input {
   color: #ffffff;
   font-size: 13px;
 }
@@ -202,7 +199,7 @@ label {
 :focus {outline: none;
 }
 
-.form-signin input:focus, textarea:focus, .form-signup input:focus, textarea:focus {
+.form-signedin input:focus, textarea:focus, .form-signedup input:focus, textarea:focus {
     background: rgba(255,255,255,.3);
     border: none; 
     padding-right: 40px;
@@ -294,7 +291,7 @@ label {
   margin-top: -1px;
 }
 
-.btn-signup {
+.btn-signedup {
   float: left;
   font-weight: 700;
   text-transform: uppercase;
@@ -310,7 +307,7 @@ label {
   background-color: #1059FF;
 }
 
-.btn-signin {
+.btn-signedin {
   float: left;
   padding-top: 8px;
   width: 100%;
@@ -349,7 +346,7 @@ label {
   background-color: rgba(255,255,255,1);
 }
 
-a.btn-signup:hover, a.btn-signin:hover {
+.btn-signedup:hover, a.btn-signedin:hover {
     cursor: pointer; 
     background-color: #0F4FE6;
     transition: background-color .5s; 
