--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Manegement</title>
   <link rel="stylesheet" href="{% static 'css/base.css'%}">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 </head>
 <body>
@@ -17,6 +21,9 @@
  {%include "components/navbar.html"%}
   </div>
   </header>
+  
+
+ 
   <div id='register_form' style="display: none;">
     {% include 'register.html' %}
     </div>
@@ -34,16 +41,13 @@
   <div class="col-sm-11">
   <div class="container index_content">
     
+   
     <div class="row">
      
     <div class="jumbotron">
       <div class="text-center">    
-       
-        
-       
           <h1>I am John Doe</h1>
           <p>And I'm a Photographer
-          
           </p>
 
         <div class="row">
@@ -162,6 +166,6 @@
 {% include 'components/footer.html'%}
 
 <script src="{% static 'js/index.js'%}">
-  
+  <script src="{% static 'js/register.js'%}"></script>
 </script>
 </html>
