--- a/templates/index.html
+++ b/templates/index.html
@@ -8,9 +8,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Personal Manegement</title>
   <link rel="stylesheet" href="{% static 'css/base.css'%}">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+ 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -137,7 +136,33 @@
       
     <div class="container-fluid bg-3 text-center">    
       <h3>Some of my Work</h3><br>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="card card-1">
+              <h3>100% экспертность</h3>
+              <p>У нас работают только профессионалы</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card card-2">
+              <h3>Связь 24.7</h3>
+              <p>Постоянная связь с менеджерами проекта во время проведения мероприятия</p>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card card-3">
+              <h3>Идеи</h3>
+              <p>С нами вы сможете реализовать любую идею для мероприятия</p>
+            </div>
+          </div>
+        </div>
+        {% include 'components/steps.html'%}
+      
+      </div>
+      
       <div class="row">
+       
         <div class="col-sm-3">
           <p>Some text..</p>
           <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image">
@@ -165,7 +190,7 @@
 </body>
 {% include 'components/footer.html'%}
 
-<script src="{% static 'js/index.js'%}">
+<script src="{% static 'js/index.js'%}"><script>
   <script src="{% static 'js/register.js'%}"></script>
-</script>
+  <script src="{% static 'js/bootstrap/bootstrap.js'%}"></script>
 </html>
