--- a/templates/components/navbar.html
+++ b/templates/components/navbar.html
@@ -21,10 +21,10 @@
       </li>
       <li><a href="#">Page 2</a></li>
     </ul>
-    {%if user %}
+    {%if user_url%}
     <ul class="nav navbar-nav navbar-right">
-      <li ><a href="{% url 'profile' user.username %}" class="nav-link"> <img src="{{user.avatar.url}}" class="nav-avatar"></a></li>
-      <li ><a href="" class="nav-link">{{user.username}}</a></li>
+      <li ><a href="{{user_url}}" class="nav-link"> <img src="{{user.avatar.url}}" class="nav-avatar"></a></li>
+      <li class="nav-link"><a href="{{user_url}}">{{user.username}}</a></li>
       <li ><a href="#" onclick="showRegisterForm()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
       <li>
      <a href="{% url 'logout'%}"/><span class="glyphicon glyphicon-log-in"></span> Log out</a>
@@ -33,7 +33,6 @@
     {%else%}
     <ul class="nav navbar-nav navbar-right">
     <li ><a href="#" onclick="showRegisterForm()"><span class="glyphicon glyphicon-user"></span> Sign Up</a></li>
-      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Log out </a></li>
     </ul>
     {% endif %}
   </div>
