--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,9 @@
   <title>Personal Manegement</title>
   <link rel="stylesheet" href="{% static 'css/base.css'%}">
 
- 
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -192,5 +194,4 @@
 
 <script src="{% static 'js/index.js'%}"><script>
   <script src="{% static 'js/register.js'%}"></script>
-  <script src="{% static 'js/bootstrap/bootstrap.js'%}"></script>
 </html>
