--- a/templates/manager/profile.html
+++ b/templates/manager/profile.html
@@ -8,8 +8,10 @@
   <title>Document</title>
 </head>
 <body>
-<div class="" style="display: flex;flex-direction: column;">
+<div class="" style="display: flex;flex-direction: column;width: 100%;">
+<div style="position:relative; left:0;right: 0;top:0;">
 {% include 'components/navbar.html'%}
+</div>
 <div class="app-container">
   <div class="app-header">
     <div class="app-header-left">
@@ -31,7 +33,7 @@
           <path d="M21 12.79A9 9 0 1111.21 3 7 7 0 0021 12.79z"></path>
         </svg>
       </button>
-      <button class="add-btn" title="Add New Project">
+      <button class="add-btn" title="Add New Project" id="add-btn">
         <svg class="btn-icon" xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
           <line x1="12" y1="5" x2="12" y2="19" />
           <line x1="5" y1="12" x2="19" y2="12" /></svg>
@@ -119,7 +121,9 @@
         </div>
       </div>
       <div class="project-boxes jsGridView">
+       
         <div class="project-box-wrapper">
+       
           <div class="project-box" style="background-color: #fee4cb;">
             <div class="project-box-header">
               <span>December 10, 2020</span>
@@ -130,8 +134,8 @@
                     <circle cx="12" cy="5" r="1" />
                     <circle cx="12" cy="19" r="1" /></svg>
                 </button>
+            </div>
           </div>
-        </div>
         <div class="project-box-content-header">
           <p class="box-content-header">Web Designing</p>
           <p class="box-content-subheader">Prototyping</p>
@@ -159,6 +163,9 @@
         </div>
       </div>
     </div>
+    {% for project in projects%}
+      {% include 'components/project-box.html'%}
+    {% endfor %}
     <div class="project-box-wrapper">
       <div class="project-box" style="background-color: #e9e7fd;">
         <div class="project-box-header">
@@ -279,46 +286,7 @@
         </div>
       </div>
     </div>
-    <div class="project-box-wrapper">
-      <div class="project-box" style="background-color: #c8f7dc;">
-        <div class="project-box-header">
-          <span>December 10, 2020</span>
-          <div class="more-wrapper">
-            <button class="project-btn-more">
-              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
-                <circle cx="12" cy="12" r="1" />
-                <circle cx="12" cy="5" r="1" />
-                <circle cx="12" cy="19" r="1" /></svg>
-            </button>
-          </div>
-        </div>
-        <div class="project-box-content-header">
-          <p class="box-content-header">Data Analysis</p>
-          <p class="box-content-subheader">Prototyping</p>
-        </div>
-        <div class="box-progress-wrapper">
-          <p class="box-progress-header">Progress</p>
-          <div class="box-progress-bar">
-            <span class="box-progress" style="width: 60%; background-color: #34c471"></span>
-          </div>
-          <p class="box-progress-percentage">60%</p>
-        </div>
-        <div class="project-box-footer">
-          <div class="participants">
-            <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="participant">
-            <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fG1hbnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="participant">
-            <button class="add-participant" style="color: #34c471;">
-              <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
-                <path d="M12 5v14M5 12h14" />
-              </svg>
-            </button>
-          </div>
-          <div class="days-left" style="color: #34c471;">
-            2 Days Left
-          </div>
-        </div>
-      </div>
-    </div>
+  
     <div class="project-box-wrapper">
       <div class="project-box" style="background-color: #d5deff;">
         <div class="project-box-header">
@@ -461,5 +429,10 @@
 </div>
 </div>
 </div>
+{% include 'components/projectCreatingForm.html'%}
 </body>
+
+<script src="{% static 'js/manager-profile.js'%}"></script>
+
+</script>
 </html>
