--- a/static/css/project.css
+++ b/static/css/project.css
@@ -13,14 +13,6 @@ html,
 body {
   height: 100%; }
 
-body {
-  background: linear-gradient(135deg, #044f48, #2a7561);
-  background-size: cover;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
-  line-height: 1.3;
-  overflow: hidden; }
-
 .bg {
   width: 100%;
   height: 100%;
@@ -31,17 +23,16 @@ body {
   filter: blur(80px);
   transform: scale(1.2); }
 
-/*--------------------
-Chat
---------------------*/
 .chat {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  margin-top: 60px;
+  position: relative;
   transform: translate(-50%, -50%);
-  width: 300px;
-  height: 80vh;
-  max-height: 500px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 400px;
+  height: 90vh;
+  max-height: 600px;
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, 0.2);
@@ -162,10 +153,11 @@ Messages
       transform-origin: 0 0;
       animation: bounce 500ms linear both; }
     .messages .message.loading::before {
-      position: absolute;
-      top: 50%;
-      left: 50%;
+      position: relative;
       transform: translate(-50%, -50%);
+      position: absolute;
+      left: 50%;
+      top: 50%;
       content: '';
       display: block;
       width: 3px;
@@ -184,10 +176,11 @@ Messages
       height: 10px;
       position: relative; }
       .messages .message.loading span::before {
-        position: absolute;
-        top: 50%;
-        left: 50%;
+        position: relative;
         transform: translate(-50%, -50%);
+        position: absolute;
+        left: 50%;
+        top: 50%;
         content: '';
         display: block;
         width: 3px;
@@ -199,10 +192,11 @@ Messages
         animation: ball 0.45s cubic-bezier(0, 0, 0.15, 1) alternate infinite;
         margin-left: -7px; }
       .messages .message.loading span::after {
-        position: absolute;
-        top: 50%;
-        left: 50%;
+        position: relative;
         transform: translate(-50%, -50%);
+        position: absolute;
+        left: 50%;
+        top: 50%;
         content: '';
         display: block;
         width: 3px;
