--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -2,10 +2,12 @@
 Mixins
 --------------------*/
 @mixin center {
-  position: absolute;
-  top: 50%;
-  left: 50%;
+  position: relative;
   transform: translate(-50%, -50%);
+  position:absolute;
+  left:50%;
+  top:50%;
+
 }
 
 @mixin ball {
@@ -37,12 +39,8 @@ body {
 }
 
 body {
-  background: linear-gradient(135deg, #044f48, #2a7561);
-  background-size: cover;
-  font-family: 'Open Sans', sans-serif;
-  font-size: 12px;
-  line-height: 1.3;
-  overflow: hidden;
+ 
+  
 }
 
 .bg {
@@ -57,14 +55,13 @@ body {
 }
 
 
-/*--------------------
-Chat
---------------------*/
+
 .chat {
+  margin-top: 60px;
   @include center;
-  width: 300px;
-  height: 80vh;
-  max-height: 500px;
+  width: 400px;
+  height: 90vh;
+  max-height: 600px;
   z-index: 2;
   overflow: hidden;
   box-shadow: 0 5px 30px rgba(0, 0, 0, .2);
