--- a/templates/components/project-box.html
+++ b/templates/components/project-box.html
@@ -3,7 +3,7 @@
 <div class="project-box-wrapper">
   <div class="project-box" style="background-color: #c8f7dc;">
     <div class="project-box-header">
-      <span>project.public_date</span>
+      <span>{{project.public_date}}</span>
       <div class="more-wrapper">
         <button class="project-btn-more">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-more-vertical">
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="project-box-content-header">
-      <p class="box-content-header">{{project.event}}</p>
+    <a href="{% url 'project_show' project.id user.id%}">  <p class="box-content-header">{{project.event}}</p></a>
       <p class="box-content-subheader">{{project.name}}</p>
     </div>
     <div class="box-progress-wrapper">
@@ -30,8 +30,8 @@
       <div class="participants">
         <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2550&q=80" alt="participant">
         <img src="https://images.unsplash.com/photo-1503023345310-bd7c1de61c7d?ixid=MXwxMjA3fDB8MHxzZWFyY2h8MTB8fG1hbnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=900&q=60" alt="participant">
-        <button class="add-participant" style="color: #34c471;">
-          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus">
+        <button class="add-participant" style="color: #34c471;" onclick="showPersonalList('{{project.id}}', '{{user.id}}')">
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="12" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="3" stroke-linecap="round" stroke-linejoin="round" class="feather feather-plus" >
             <path d="M12 5v14M5 12h14" />
           </svg>
         </button>
