--- a/templates/manager/project.html
+++ b/templates/manager/project.html
@@ -1,11 +1,13 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'css/project.css'%}">
+{% include 'components/navbar.html'%}
+<div class="chat-wrapper;" >
 <div class="chat">
   <div class="chat-title">
-    <h1>Fabio Ottaviani</h1>
-    <h2>Supah</h2>
+    <h1>{{project.event}}</h1>
+    <h2>{{project.name}}</h2>
     <figure class="avatar">
-      <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/156381/profile/profile-80.jpg" /></figure>
+      <img src="{{project.photo.url}}"/></figure>
   </div>
   <div class="messages">
     <div class="messages-content"></div>
@@ -17,4 +19,6 @@
 
 </div>
 <div class="bg"></div>
+</div>
+</div>
 <script src="{% static 'js/project.js'%}"></script>
