--- a/templates/manager/profile.html
+++ b/templates/manager/profile.html
@@ -5,6 +5,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="{% static 'css/manager/main.css'%}?v=2f74b6273bbf">
+  <style>
+  a{
+  }
+  </style>
   <title>Document</title>
 </head>
 <body style="top:0;left:0;right:0; position:relative;">
