--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -45,8 +45,8 @@ body {
 
 .bg {
   width: 100%;
-  height: 100%;
-  top: 0;
+  height: 500px;
+  top: 200px;
   left: 0;
   z-index: 1;
   background: url('https://images.unsplash.com/photo-1451186859696-371d9477be93?crop=entropy&fit=crop&fm=jpg&h=975&ixjsv=2.1.0&ixlib=rb-0.3.5&q=80&w=1925') no-repeat 0 0;
@@ -77,36 +77,37 @@ body {
 Chat Title
 --------------------*/
 .chat-title {
-  flex: 0 1 45px;
+  flex: 0 1px 70px;
   position: relative;
   z-index: 2;
   background: rgba(0, 0, 0, 0.2);
   color: #fff;
   text-transform: uppercase;
   text-align: left;
-  padding: 10px 10px 10px 50px;
+  padding: 15px 15px 15px 50px;
   
   h1, h2 {
+    
     font-weight: normal;
-    font-size: 10px;
-    margin: 0;
+    font-size: 14px;
+    margin: 10px;
     padding: 0;
   }
   
   h2 {
     color: rgba(255, 255, 255, .5);
-    font-size: 8px;
+    font-size: 10px;
     letter-spacing: 1px;
   }
   
   .avatar {
     position: absolute;
     z-index: 1;
-    top: 8px;
+    top: 15px;
     left: 9px;
     border-radius: 30px;
-    width: 30px;
-    height: 30px;
+    width: 50px;
+    height: 50px;
     overflow: hidden;
     margin: 0;
     padding: 0;
