--- a/static/css/project.css
+++ b/static/css/project.css
@@ -85,7 +85,7 @@ Messages
 .messages {
   flex: 1 1 auto;
   color: rgba(255, 255, 255, 0.5);
-  overflow: hidden;
+  overflow-x: scroll;
   position: relative;
   width: 100%; }
   .messages .messages-content {
@@ -124,8 +124,8 @@ Messages
       bottom: -15px;
       left: -35px;
       border-radius: 30px;
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       overflow: hidden;
       margin: 0;
       padding: 0;
