--- a/static/css/project.scss
+++ b/static/css/project.scss
@@ -127,7 +127,7 @@ Messages
 .messages {
   flex: 1 1 auto;
   color: rgba(255, 255, 255, .5);
-  overflow: hidden;
+  overflow-x: scroll;
   position: relative;
   width: 100%;
   
@@ -175,8 +175,8 @@ Messages
       bottom: -15px;
       left: -35px;
       border-radius: 30px;
-      width: 30px;
-      height: 30px;
+      width: 40px;
+      height: 40px;
       overflow: hidden;
       margin: 0;
       padding: 0;
